# apeiron

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  test_this_run.py
core/: logic_gate.py  motor_cortex.py  session_logs.jsonl  sleep_phase.py  wake_phase.py
