[project]
name = "apeiron"
version = "0.1.0"
description = "McNS-OS Local Implementation"
authors = [
    {name = "Vyeos"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ollama (>=0.6.1,<0.7.0)",
    "chromadb (>=1.3.7,<2.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "z3-solver (>=4.15.4.0,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
